crates/pyenum-derive/tests/ui/fail/reserved_name_value.rs
use pyenum::PyEnum;

#[derive(Clone, Copy, PyEnum)]
pub enum Bad {
    Ok,
    value,
}

fn main() {}
